_sass/newsletter.scss
.address-newsletter {
  color:#484747 !important;
  display:block;
  font-family:'Lato', sans-serif;
  font-size: 24px;
  font-style:normal;
  font-weight:light;
  line-height:100%;
  letter-spacing:normal;
  margin-top:0;
  margin-right:0;
  margin-bottom:10px;
  margin-left:0;
  text-align:left;
}
.address_city {
  color:#484747 !important;
  display:block;
  font-family:'Lato', sans-serif;
  font-size:42px;
  font-style:normal;
  font-weight:regular;
  line-height:100%;
  letter-spacing:normal;
  margin-top:0;
  margin-right:0;
  margin-bottom:10px;
  margin-left:0;
  text-align:left;
}
.bodyContent{
  font-family:'Lato', sans-serif;
  line-height:140%;
  padding-top:20px;
  padding-bottom:20px;
  /*@editable*/ text-align:left;
}
.newsletter-amenities {
  color:#5e5e5e;
  font-family:'Lato', sans-serif;
  font-weight:700;
  line-height:140%;
}
.newsletter-amenities2 {
  color:#989899;
  font-family:'Lato', sans-serif;
  font-size:22px;
  font-weight:200;
  line-height:140%;
  font-style:italic;
  padding-left: 67px;
  margin-top: -10px;
}

.column_image2 {
  margin-right:1px !important;
  float:left;
}
.a_icons {
  padding-right:12px;
}
.headerContent {
  position: relative;
}
.details-button {
  width: 251px;
  border-radius: 500px;
  margin-top: -15px;
  margin-bottom: 15px;
  font-weight: 500;
  font-size: 19px;
  color: white;
  background-color: #d85744;
  border-color: #d85744;
  border-style: solid;
  border-width: thin;
  padding: 11px 26px;
  text-transform: uppercase;
  text-decoration: none;
  text-align: center;
}

.listing-label-newsletter {
  font-family:'Lato', sans-serif;
  font-size: 26px;
  color: white;
  padding: 8px 52px;
}
.rent-label {
  background-color: #d46049;
}
.lease-label {
  background-color: #3678c6;
}
.static-g-map {
  width: 800px;
}
.border-bottom {
  border-bottom: solid thin #DCDCDC;
}
.border-right {
  border-right: solid thin #DCDCDC;
}

.table {
  background-color:white;
  margin: 16px 0;
}

.amenities__table {
  padding: 18px 0;
  td {
    vertical-align: middle;
  }
  tr {
    height: 115px;
  }
  img {
    margin-right: 24px;
  }
}

.highlights__table {
  padding: 18px 0;
}

.table__caption {
  margin-top: 0;
  background: linear-gradient(to bottom, #d4d2d3, white 50%);
}

.table__map {
  margin-bottom: 50px;
}

.table__footer {
  background-color: #d85744;
  font-size: 14px;
  color: white;
  margin: 0;
}

.list-header {
  font-weight: 800;
  font-size: 16px;
}

.phone-icon {
  margin-right: 6px;
}

.padding-left {
  padding-left: 24px;
}

.padding-right {
  padding-left: 24px;
}

.newsletter-address {
  text-transform: uppercase;
  text-decoration: none !important;
  color: black !important;
}

.newsletter-footer-header {
  font-weight: 800;
  font-size: 16px;
  padding-top: 25px;
}

.newsletter-bottom-cell {
  padding-bottom: 25px;
}

.strong {
  color: black;
}

